--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -9,6 +9,24 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+<div class="wrapper">
+    <div class="banner__bg">
+        <header class="header">
+            <div class="header__wrapper">
+                <a class="header__link-logo" href="#">
+                    <img class="header__logo" src="img/logo-header.svg" alt="header-logo">
+                </a>
+
+                <nav class="header__nav">
+                    <a class="header__nav-link" href="javascript:;">Главная</a>
+                    <a class="header__nav-link" href="javascript:;">Фотографии</a>
+                    <a class="header__nav-link" href="javascript:;">Конкурс</a>
+                    <a class="header__nav-link" href="javascript:;">HTML Academy</a>
+                </nav>
+            </div>
+        </header>
+    </div>
+</div>
 
 </body>
 </html>
