--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div class="wrapper">
-    <div class="banner__bg">
+    <div class="banner-bg">
         <header class="header">
             <div class="header__wrapper">
                 <a class="header__link-logo" href="#">
@@ -25,6 +25,26 @@
                 </nav>
             </div>
         </header>
+
+        <section class="banner">
+            <div class="banner__wrapper">
+                <span class="banner__title">Взгляните на жизнь иначе!</span>
+                <a class="banner__link" href="javascript:;">Скачать приложение</a>
+
+                <div class="banner__brands">
+                    <img class="banner__brand-apple" src="img/apple-logo.svg" alt="brand-apple">
+                    <img class="banner__brand-android" src="img/android-logo.svg" alt="brand-apple">
+                    <img class="banner__brand-microsoft" src="img/microsoft-logo.svg" alt="brand-apple">
+                </div>
+
+                <span class="banner__descr">
+                    Доступно для iPhone, iPad, Android,
+                    Windows Phone, OS X, Windows 8
+                </span>
+            </div>
+        </section>
+
+        <img class="hand" src="img/hand.png" alt="hand">
     </div>
 </div>
 
