--- a/index.html
+++ b/index.html
@@ -5,48 +5,57 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Pink</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<div class="wrapper">
-    <div class="banner-bg">
-        <header class="header">
-            <div class="header__wrapper">
-                <a class="header__link-logo" href="#">
-                    <img class="header__logo" src="img/logo-header.svg" alt="header-logo">
+
+<div class="banner--bg">
+    <header class="header">
+        <div class="header__wrapper">
+            <a class="header__link-logo" href="/">
+                <img class="header__logo" src="img/logo-header.svg" alt="header-logo">
+            </a>
+
+            <nav class="header__nav">
+                <a class="header__nav-link" href="javascript:;">Главная</a>
+                <a class="header__nav-link" href="javascript:;">Фотографии</a>
+                <a class="header__nav-link" href="javascript:;">Конкурс</a>
+                <a class="header__nav-link" href="javascript:;">HTML Academy</a>
+            </nav>
+        </div>
+    </header>
+
+    <section class="banner">
+        <div class="banner__wrapper">
+            <h2 class="banner__title">Взгляните на жизнь иначе!</h2>
+            <a class="banner__link" href="javascript:;">Скачать приложение</a>
+
+            <div class="banner__brands">
+                <a class="banner__brand-link" href="https://www.apple.com/" target="_blank">
+                    <img class="banner__brand-apple" src="img/apple-logo.svg" alt="brand-apple">
                 </a>
 
-                <nav class="header__nav">
-                    <a class="header__nav-link" href="javascript:;">Главная</a>
-                    <a class="header__nav-link" href="javascript:;">Фотографии</a>
-                    <a class="header__nav-link" href="javascript:;">Конкурс</a>
-                    <a class="header__nav-link" href="javascript:;">HTML Academy</a>
-                </nav>
-            </div>
-        </header>
-
-        <section class="banner">
-            <div class="banner__wrapper">
-                <span class="banner__title">Взгляните на жизнь иначе!</span>
-                <a class="banner__link" href="javascript:;">Скачать приложение</a>
-
-                <div class="banner__brands">
-                    <img class="banner__brand-apple" src="img/apple-logo.svg" alt="brand-apple">
+                <a class="banner__brand-link" href="https://www.android.com/" target="_blank">
                     <img class="banner__brand-android" src="img/android-logo.svg" alt="brand-apple">
-                    <img class="banner__brand-microsoft" src="img/microsoft-logo.svg" alt="brand-apple">
-                </div>
+                </a>
 
-                <span class="banner__descr">
+                <a class="banner__brand-link" href="https://www.microsoft.com/" target="_blank">
+                    <img class="banner__brand-microsoft" src="img/microsoft-logo.svg" alt="brand-apple">
+
+                </a>
+            </div>
+
+            <span class="banner__descr">
                     Доступно для iPhone, iPad, Android,
                     Windows Phone, OS X, Windows 8
-                </span>
-            </div>
-        </section>
+            </span>
+        </div>
+    </section>
 
-        <img class="hand" src="img/hand.png" alt="hand">
-    </div>
+    <img class="hand" src="img/hand.png" alt="hand">
 </div>
+
 
 </body>
 </html>
