--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@
 </head>
 <body>
 
-<div class="banner--bg">
+<div class="banner">
     <header class="header">
         <div class="header__wrapper">
             <a class="header__link-logo" href="/">
                 <img class="header__logo" src="img/logo-header.svg" alt="header-logo">
             </a>
 
-            <nav class="header__nav">
-                <a class="header__nav-link" href="javascript:;">Главная</a>
-                <a class="header__nav-link" href="javascript:;">Фотографии</a>
-                <a class="header__nav-link" href="javascript:;">Конкурс</a>
-                <a class="header__nav-link" href="javascript:;">HTML Academy</a>
+            <nav class="navigation">
+                <a class="navigation__link" href="javascript:;">Главная</a>
+                <a class="navigation__link" href="javascript:;">Фотографии</a>
+                <a class="navigation__link" href="javascript:;">Конкурс</a>
+                <a class="navigation__link" href="javascript:;">HTML Academy</a>
             </nav>
         </div>
     </header>
 
-    <section class="banner">
-        <div class="banner__wrapper">
+    <section class="banner__wrapper">
+        <div class="banner__sub-wrapper">
             <h2 class="banner__title">Взгляните на жизнь иначе!</h2>
             <a class="banner__link" href="javascript:;">Скачать приложение</a>
 
@@ -53,7 +53,7 @@
         </div>
     </section>
 
-    <img class="hand" src="img/hand.png" alt="hand">
+    <img class="banner__hand" src="img/hand.png" alt="hand">
 </div>
 
 
