--- a/index.html
+++ b/index.html
@@ -56,6 +56,50 @@
     <img class="banner__hand" src="img/hand.png" alt="hand">
 </div>
 
+<main class="offers">
+    <div class="offers__bg"></div>
+    <div class="offers__wrapper">
+        <h2 class="offers__title">
+            Устали от серости мегаполиса?
+            Нам есть, что вам<br>
+            предложить!
+        </h2>
+
+        <div class="offers__main">
+            <figure class="offers__main-item">
+                <img class="offers__main-photo" src="img/iphone-1screen.png" alt="photo">
+                <figcaption class="offers__main-title">Поднимает настроение</figcaption>
+                <p class="offers__main-text">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
+            </figure>
+
+            <figure class="offers__main-item">
+                <img class="offers__main-photo" src="img/iphone-2screen.png" alt="photo">
+                <figcaption class="offers__main-title">Меняет мир вокруг</figcaption>
+                <p class="offers__main-text">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
+            </figure>
+
+            <figure class="offers__main-item">
+                <img class="offers__main-photo" src="img/iphone-3screen.png" alt="photo">
+                <figcaption class="offers__main-title">Заводит новых друзей</figcaption>
+                <p class="offers__main-text">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
+            </figure>
+        </div>
+
+        <div class="offers__facts">
+            <img class="offers__facts-timer" src="img/timer.svg" alt="timer">
+
+            <div class="offers__facts-main">
+                <h2 class="offers__facts-title">Эффект на 24 часа</h2>
+                <p class="offers__facts-text">
+                    Британские ученые провели исследования и доказали,
+                    что положительный эффект от использования приложения длится целые сутки!
+                </p>
+                <a class="offers__facts-link" href="javascript:;">Узнать больше об исследовании</a>
+            </div>
+        </div>
+    </div>
+
+</main>
 
 </body>
 </html>
