--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Pink</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
 </head>
 <body>
 
@@ -98,8 +99,66 @@
             </div>
         </div>
     </div>
-
 </main>
 
+<div class="testimonials">
+    <div class="testimonials__wrapper">
+        <img class="testimonials__image" src="img/quotes.svg" alt="quotes">
+
+        <div class="swiper-container">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <p class="testimonials__text">
+                        «Это приложение перевернуло мой мир и позволило по-новому взглянуть на
+                        привычные серые вещи! А еще я познакомился со своей будущей женой в
+                        комментариях к выложенной фотографии!»
+                    </p>
+
+                    <span class="testimonials__author">
+                        Николай Петров
+                    </span>
+
+                    <span class="testimonials__author-info">
+                        25 лет, водитель трамвая
+                    </span>
+                </div>
+
+                <div class="swiper-slide">
+                    <p class="testimonials__text">
+                        «Очень понравилось, все супер!»
+                    </p>
+
+                    <span class="testimonials__author">
+                        Анна Иванова
+                    </span>
+
+                    <span class="testimonials__author-info">
+                        23 лет, дизайнер
+                    </span>
+                </div>
+
+                <div class="swiper-slide">
+                    <p class="testimonials__text">
+                        «Это приложение помогло найти мне новые увлечения и обрести новых друзей по интересам»
+                    </p>
+
+                    <span class="testimonials__author">
+                        Виталий Сидоров
+                    </span>
+
+                    <span class="testimonials__author-info">
+                        27 лет, экономист
+                    </span>
+                </div>
+            </div>
+            <!-- Add Arrows -->
+            <img class="arrow arrow-next" src="img/arrow.svg" alt="arrow-next">
+            <img class="arrow arrow-prev" src="img/arrow.svg" alt="arrow-prev">
+        </div>
+    </div>
+</div>
+
+<script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
