--- a/index.html
+++ b/index.html
@@ -158,6 +158,90 @@
     </div>
 </div>
 
+<div class="tariffs">
+    <div class="tariffs__bg"></div>
+    <div class="tariffs__wrapper">
+        <div class="tariffs__table-header">
+            <div class="tariffs__row">
+                <div class="tariffs__table-header-item">
+                    <span class="tariffs__table-title">база</span>
+                    <span class="tariffs__table-value">1,99 USD</span>
+                </div>
+
+                <div class="tariffs__table-header-item">
+                    <span class="tariffs__table-title">стандарт</span>
+                    <span class="tariffs__table-value">3,99 USD</span>
+
+                    <div class="tariffs__sticker">
+                        <div class="tariffs__sticker-text">хит</div>
+                    </div>
+                </div>
+
+                <div class="tariffs__table-header-item">
+                    <span class="tariffs__table-title">анлим</span>
+                    <span class="tariffs__table-value">9,99 USD</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="tariffs__table">
+            <div class="tariffs__row">
+                <div class="tariffs__table-item tariffs__table-item--main">
+                    <span class="tariffs__row-title">Розовый фильтр</span>
+                </div>
+
+                <div class="tariffs__table-item">
+                    <img class="tariffs__table-status" src="img/check.svg" alt="check">
+                </div>
+
+                <div class="tariffs__table-item">
+                    <img class="tariffs__table-status" src="img/check.svg" alt="check">
+                </div>
+
+                <div class="tariffs__table-item">
+                    <img class="tariffs__table-status" src="img/check.svg" alt="check">
+                </div>
+            </div>
+
+            <div class="tariffs__row">
+                <div class="tariffs__table-item tariffs__table-item--main">
+                    <span class="tariffs__row-title">Смайлики</span>
+                </div>
+
+                <div class="tariffs__table-item">
+                    <img class="tariffs__table-status" src="img/cross.svg" alt="cross">
+                </div>
+
+                <div class="tariffs__table-item">
+                    <img class="tariffs__table-status" src="img/check.svg" alt="check">
+                </div>
+
+                <div class="tariffs__table-item">
+                    <img class="tariffs__table-status" src="img/check.svg" alt="check">
+                </div>
+            </div>
+
+            <div class="tariffs__row">
+                <div class="tariffs__table-item tariffs__table-item--main">
+                    <span class="tariffs__row-title">Комментарии</span>
+                </div>
+
+                <div class="tariffs__table-item">
+                    <img class="tariffs__table-status" src="img/cross.svg" alt="cross">
+                </div>
+
+                <div class="tariffs__table-item">
+                    <img class="tariffs__table-status" src="img/cross.svg" alt="cross">
+                </div>
+
+                <div class="tariffs__table-item">
+                    <img class="tariffs__table-status" src="img/check.svg" alt="check">
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
 <script src="js/script.js"></script>
 </body>
