--- a/index.html
+++ b/index.html
@@ -58,191 +58,218 @@
 </div>
 
 <main class="offers">
-    <div class="offers__bg"></div>
-    <div class="offers__wrapper">
-        <h2 class="offers__title">
-            Устали от серости мегаполиса?
-            Нам есть, что вам<br>
-            предложить!
-        </h2>
+    <section class="section">
+        <div class="section__bg"></div>
+        <div class="section__wrapper">
+            <h2 class="offers__title">
+                Устали от серости мегаполиса?
+                Нам есть, что вам<br>
+                предложить!
+            </h2>
 
-        <div class="offers__main">
-            <figure class="offers__main-item">
-                <img class="offers__main-photo" src="img/iphone-1screen.png" alt="photo">
-                <figcaption class="offers__main-title">Поднимает настроение</figcaption>
-                <p class="offers__main-text">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
-            </figure>
+            <div class="offers-items">
+                <figure class="offers-items__item">
+                    <img class="offers-items__photo" src="img/iphone-1screen.png" alt="iphone-1screen">
+                    <figcaption>
+                        <h3 class="offers-items__title">Поднимает настроение</h3>
+                        <p class="offers-items__text">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
+                    </figcaption>
+                </figure>
 
-            <figure class="offers__main-item">
-                <img class="offers__main-photo" src="img/iphone-2screen.png" alt="photo">
-                <figcaption class="offers__main-title">Меняет мир вокруг</figcaption>
-                <p class="offers__main-text">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
-            </figure>
+                <figure class="offers-items__item">
+                    <img class="offers-items__photo" src="img/iphone-2screen.png" alt="iphone-2screen">
+                    <figcaption>
+                        <h3 class="offers-items__title">Меняет мир вокруг</h3>
+                        <p class="offers-items__text">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
+                    </figcaption>
+                </figure>
 
-            <figure class="offers__main-item">
-                <img class="offers__main-photo" src="img/iphone-3screen.png" alt="photo">
-                <figcaption class="offers__main-title">Заводит новых друзей</figcaption>
-                <p class="offers__main-text">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
-            </figure>
+                <figure class="offers-items__item">
+                    <img class="offers-items__photo" src="img/iphone-3screen.png" alt="iphone-3screen">
+                    <figcaption>
+                        <h3 class="offers-items__title">Заводит новых друзей</h3>
+                        <p class="offers-items__text">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
+                    </figcaption>
+                </figure>
+            </div>
         </div>
+    </section>
+</main>
 
-        <div class="offers__facts">
-            <img class="offers__facts-timer" src="img/timer.svg" alt="timer">
+<div class="facts">
+    <section class="section">
+        <div class="section__bg"></div>
+        <div class="section__wrapper">
+            <img class="facts__timer" src="img/timer.svg" alt="timer">
 
-            <div class="offers__facts-main">
-                <h2 class="offers__facts-title">Эффект на 24 часа</h2>
-                <p class="offers__facts-text">
+            <div class="facts__main">
+                <h2 class="facts__title">Эффект на 24 часа</h2>
+                <p class="facts__text">
                     Британские ученые провели исследования и доказали,
                     что положительный эффект от использования приложения длится целые сутки!
                 </p>
-                <a class="offers__facts-link" href="javascript:;">Узнать больше об исследовании</a>
+                <a class="facts__link" href="javascript:;">Узнать больше об исследовании</a>
             </div>
         </div>
-    </div>
-</main>
+    </section>
+</div>
 
 <div class="testimonials">
-    <div class="testimonials__wrapper">
-        <img class="testimonials__image" src="img/quotes.svg" alt="quotes">
+    <section class="section">
+        <div class="section__wrapper">
+            <img class="testimonials__image" src="img/quotes.svg" alt="quotes">
 
-        <div class="swiper-container">
-            <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                    <p class="testimonials__text">
-                        «Это приложение перевернуло мой мир и позволило по-новому взглянуть на
-                        привычные серые вещи! А еще я познакомился со своей будущей женой в
-                        комментариях к выложенной фотографии!»
-                    </p>
+            <div class="swiper-container">
+                <div class="swiper-wrapper">
+                    <blockquote class="swiper-slide">
+                        <p class="comments__text">
+                            «Это приложение перевернуло мой мир и позволило по-новому взглянуть на
+                            привычные серые вещи! А еще я познакомился со своей будущей женой в
+                            комментариях к выложенной фотографии!»
+                        </p>
 
-                    <span class="testimonials__author">
-                        Николай Петров
-                    </span>
+                        <cite class="comments__author">
+                            Николай Петров
+                        </cite>
 
-                    <span class="testimonials__author-info">
-                        25 лет, водитель трамвая
-                    </span>
+                        <span class="comments__author-info">
+                            25 лет, водитель трамвая
+                        </span>
+                    </blockquote>
+
+                    <blockquote class="swiper-slide">
+                        <p class="comments__text">
+                            «Очень понравилось, все супер!»
+                        </p>
+
+                        <cite class="comments__author">
+                            Анна Иванова
+                        </cite>
+
+                        <span class="comments__author-info">
+                            23 лет, дизайнер
+                        </span>
+                    </blockquote>
+
+                    <blockquote class="swiper-slide">
+                        <p class="comments__text">
+                            «Это приложение помогло найти мне новые увлечения и обрести новых друзей по интересам»
+                        </p>
+
+                        <cite class="comments__author">
+                            Виталий Сидоров
+                        </cite>
+
+                        <span class="comments__author-info">
+                            27 лет, экономист
+                        </span>
+                    </blockquote>
                 </div>
-
-                <div class="swiper-slide">
-                    <p class="testimonials__text">
-                        «Очень понравилось, все супер!»
-                    </p>
-
-                    <span class="testimonials__author">
-                        Анна Иванова
-                    </span>
-
-                    <span class="testimonials__author-info">
-                        23 лет, дизайнер
-                    </span>
-                </div>
-
-                <div class="swiper-slide">
-                    <p class="testimonials__text">
-                        «Это приложение помогло найти мне новые увлечения и обрести новых друзей по интересам»
-                    </p>
-
-                    <span class="testimonials__author">
-                        Виталий Сидоров
-                    </span>
-
-                    <span class="testimonials__author-info">
-                        27 лет, экономист
-                    </span>
-                </div>
+                <!-- Add Arrows -->
+                <img class="arrow arrow-next" src="img/arrow.svg" alt="arrow-next">
+                <img class="arrow arrow-prev" src="img/arrow.svg" alt="arrow-prev">
             </div>
-            <!-- Add Arrows -->
-            <img class="arrow arrow-next" src="img/arrow.svg" alt="arrow-next">
-            <img class="arrow arrow-prev" src="img/arrow.svg" alt="arrow-prev">
         </div>
-    </div>
+    </section>
 </div>
 
 <div class="tariffs">
-    <div class="tariffs__bg"></div>
-    <div class="tariffs__wrapper">
-        <div class="tariffs__table-header">
-            <div class="tariffs__row">
-                <div class="tariffs__table-header-item">
-                    <span class="tariffs__table-title">база</span>
-                    <span class="tariffs__table-value">1,99 USD</span>
-                </div>
+    <section class="section">
+        <div class="section__bg"></div>
+        <div class="section__wrapper">
+            <table class="tariffs-table">
+                <tr class="tariffs-table__row tariffs-table__header">
+                    <th class="tariffs-table__header-item tariffs-table__header-item--empty"></th>
 
-                <div class="tariffs__table-header-item">
-                    <span class="tariffs__table-title">стандарт</span>
-                    <span class="tariffs__table-value">3,99 USD</span>
+                    <th class="tariffs-table__header-item">
+                        <span class="tariffs-table__header-title">база</span>
+                        <span class="tariffs-table__header-value">1,99 USD</span>
+                    </th>
 
-                    <div class="tariffs__sticker">
-                        <div class="tariffs__sticker-text">хит</div>
-                    </div>
-                </div>
+                    <th class="tariffs-table__header-item">
+                        <span class="tariffs-table__header-title">стандарт</span>
+                        <span class="tariffs-table__header-value">3,99 USD</span>
 
-                <div class="tariffs__table-header-item">
-                    <span class="tariffs__table-title">анлим</span>
-                    <span class="tariffs__table-value">9,99 USD</span>
-                </div>
-            </div>
+                        <div class="tariffs-table__sticker&#45;&#45;wrapper">
+                            <div class="tariffs-table__sticker">хит</div>
+                        </div>
+                    </th>
+
+                    <th class="tariffs-table__header-item">
+                        <span class="tariffs-table__header-title">анлим</span>
+                        <span class="tariffs-table__header-value">9,99 USD</span>
+                    </th>
+                </tr>
+
+                <tr class="tariffs-table__row">
+                    <td class="tariffs-table__item">
+                        <span class="tariffs-table__title">Розовый фильтр</span>
+                    </td>
+
+                    <td class="tariffs-table__item">
+                        <img class="tariffs-table__status" src="img/check.svg" alt="check">
+                        <img class="tariffs-table__status" src="img/cross.svg" alt="cross" hidden>
+                    </td>
+
+                    <td class="tariffs-table__item">
+                        <img class="tariffs-table__status" src="img/check.svg" alt="check">
+                        <img class="tariffs-table__status" src="img/cross.svg" alt="cross" hidden>
+                    </td>
+
+                    <td class="tariffs-table__item">
+                        <img class="tariffs-table__status" src="img/check.svg" alt="check">
+                        <img class="tariffs-table__status" src="img/cross.svg" alt="cross" hidden>
+                    </td>
+                </tr>
+
+                <tr class="tariffs-table__row">
+                    <td class="tariffs-table__item">
+                        <span class="tariffs-table__title">Смайлики</span>
+                    </td>
+
+                    <td class="tariffs-table__item">
+                        <img class="tariffs-table__status" src="img/check.svg" alt="check" hidden>
+                        <img class="tariffs-table__status" src="img/cross.svg" alt="cross">
+                    </td>
+
+                    <td class="tariffs-table__item">
+                        <img class="tariffs-table__status" src="img/check.svg" alt="check">
+                        <img class="tariffs-table__status" src="img/cross.svg" alt="cross" hidden>
+                    </td>
+
+                    <td class="tariffs-table__item">
+                        <img class="tariffs-table__status" src="img/check.svg" alt="check">
+                        <img class="tariffs-table__status" src="img/cross.svg" alt="cross" hidden>
+                    </td>
+                </tr>
+
+                <tr class="tariffs-table__row">
+                    <td class="tariffs-table__item">
+                        <span class="tariffs-table__title">Комментарии</span>
+                    </td>
+
+                    <td class="tariffs-table__item">
+                        <img class="tariffs-table__status" src="img/check.svg" alt="check" hidden>
+                        <img class="tariffs-table__status" src="img/cross.svg" alt="cross">
+                    </td>
+
+                    <td class="tariffs-table__item">
+                        <img class="tariffs-table__status" src="img/check.svg" alt="check" hidden>
+                        <img class="tariffs-table__status" src="img/cross.svg" alt="cross">
+                    </td>
+
+                    <td class="tariffs-table__item">
+                        <img class="tariffs-table__status" src="img/check.svg" alt="check">
+                        <img class="tariffs-table__status" src="img/cross.svg" alt="cross" hidden>
+                    </td>
+                </tr>
+            </table>
         </div>
-
-        <div class="tariffs__table">
-            <div class="tariffs__row">
-                <div class="tariffs__table-item tariffs__table-item--main">
-                    <span class="tariffs__row-title">Розовый фильтр</span>
-                </div>
-
-                <div class="tariffs__table-item">
-                    <img class="tariffs__table-status" src="img/check.svg" alt="check">
-                </div>
-
-                <div class="tariffs__table-item">
-                    <img class="tariffs__table-status" src="img/check.svg" alt="check">
-                </div>
-
-                <div class="tariffs__table-item">
-                    <img class="tariffs__table-status" src="img/check.svg" alt="check">
-                </div>
-            </div>
-
-            <div class="tariffs__row">
-                <div class="tariffs__table-item tariffs__table-item--main">
-                    <span class="tariffs__row-title">Смайлики</span>
-                </div>
-
-                <div class="tariffs__table-item">
-                    <img class="tariffs__table-status" src="img/cross.svg" alt="cross">
-                </div>
-
-                <div class="tariffs__table-item">
-                    <img class="tariffs__table-status" src="img/check.svg" alt="check">
-                </div>
-
-                <div class="tariffs__table-item">
-                    <img class="tariffs__table-status" src="img/check.svg" alt="check">
-                </div>
-            </div>
-
-            <div class="tariffs__row">
-                <div class="tariffs__table-item tariffs__table-item--main">
-                    <span class="tariffs__row-title">Комментарии</span>
-                </div>
-
-                <div class="tariffs__table-item">
-                    <img class="tariffs__table-status" src="img/cross.svg" alt="cross">
-                </div>
-
-                <div class="tariffs__table-item">
-                    <img class="tariffs__table-status" src="img/cross.svg" alt="cross">
-                </div>
-
-                <div class="tariffs__table-item">
-                    <img class="tariffs__table-status" src="img/check.svg" alt="check">
-                </div>
-            </div>
-        </div>
-    </div>
+    </section>
 </div>
 
 <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+<script src="js/swiper.js"></script>
 <script src="js/script.js"></script>
 </body>
 </html>
