--- a/index.html
+++ b/index.html
@@ -268,8 +268,77 @@
     </section>
 </div>
 
+<div class="contacts">
+    <section class="section">
+        <div class="section__wrapper">
+            <h2 class="contacts__title">Остались вопросы? Свяжитесь с нами!</h2>
+
+            <div class="contacts__items">
+                <div class="contacts__item">
+                    <h3 class="contacts__item-title">Звоните:</h3>
+
+                    <span class="contacts__item-text">+7 (812) 555-66-66</span>
+                </div>
+
+                <div class="contacts__item">
+                    <h3 class="contacts__item-title">Приезжайте в гости:</h3>
+
+                    <span class="contacts__item-text">ул. Большая Конюшенная, 19/8</span>
+                </div>
+
+                <div class="contacts__item">
+                    <h3 class="contacts__item-title">Пишите:</h3>
+
+                    <span class="contacts__item-text">mail@htmlacademy.ru</span>
+                </div>
+            </div>
+        </div>
+    </section>
+</div>
+
+<div class="map">
+    <section class="section">
+        <div class="section__bg">
+        </div>
+        <div class="map__main" id="wrapper-9cd199b9cc5410cd3b1ad21cab2e54d3">
+            <div id="map-9cd199b9cc5410cd3b1ad21cab2e54d3"></div>
+            <a href="https://embedgooglemap.1map.com/ru?embed_id=175608">1 Map</a>
+        </div>
+    </section>
+</div>
+
+<footer class="footer">
+    <section class="section">
+        <div class="section__wrapper">
+            <a class="footer__link-logo" href="/">
+                <img class="footer__logo" src="img/logo-footer.svg" alt="footer-logo">
+            </a>
+
+            <div class="footer__socials">
+                <a class="footer__socials-item" href="javascript:;">
+                    <img class="footer__socials-item-logo" src="img/twitter.svg" alt="twitter-logo">
+                </a>
+
+                <a class="footer__socials-item" href="javascript:;">
+                    <img class="footer__socials-item-logo" src="img/facebook.svg" alt="facebook-logo">
+                </a>
+
+                <a class="footer__socials-item" href="javascript:;">
+                    <img class="footer__socials-item-logo" src="img/youtube.svg" alt="youtube-logo">
+                </a>
+            </div>
+
+            <div class="footer__rights">
+                <span class="footer__rights-text">Разработано</span>
+                <img class="footer__rights-logo" src="img/htmlacademy.svg" alt="htmlacademy-logo">
+            </div>
+        </div>
+    </section>
+</footer>
+
 <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
 <script src="js/swiper.js"></script>
+<script src="js/map.js"></script>
 <script src="js/script.js"></script>
 </body>
 </html>
