--- a/index.html
+++ b/index.html
@@ -298,11 +298,12 @@
 
 <div class="map">
     <section class="section">
-        <div class="section__bg">
-        </div>
-        <div class="map__main" id="wrapper-9cd199b9cc5410cd3b1ad21cab2e54d3">
-            <div id="map-9cd199b9cc5410cd3b1ad21cab2e54d3"></div>
-            <a href="https://embedgooglemap.1map.com/ru?embed_id=175608">1 Map</a>
+        <div class="section__bg"></div>
+        <div class="section__wrapper">
+            <div class="map__main" id="wrapper-9cd199b9cc5410cd3b1ad21cab2e54d3">
+                <div id="map-9cd199b9cc5410cd3b1ad21cab2e54d3"></div>
+                <a href="https://embedgooglemap.1map.com/ru?embed_id=175608">1 Map</a>
+            </div>
         </div>
     </section>
 </div>
