--- a/index.html
+++ b/index.html
@@ -11,11 +11,30 @@
 </head>
 <body>
 
+<div class="burger-menu">
+    <div class="header__wrapper">
+        <div class="burger-menu__header">
+            <a class="header__link-logo" href="/">
+                <img class="header__logo--mobile" src="img/logo-header-mobile.svg" alt="header-logo">
+            </a>
+
+            <img class="burger-menu__header-close" src="img/menu-cross.svg" alt="close">
+        </div>
+
+        <nav class="navigation">
+            <a class="navigation__link" href="javascript:;">Главная</a>
+            <a class="navigation__link" href="javascript:;">Фотографии</a>
+            <a class="navigation__link" href="javascript:;">Конкурс</a>
+            <a class="navigation__link" href="javascript:;">HTML Academy</a>
+        </nav>
+    </div>
+</div>
 <div class="banner">
     <header class="header">
         <div class="header__wrapper">
             <a class="header__link-logo" href="/">
                 <img class="header__logo" src="img/logo-header.svg" alt="header-logo">
+                <img class="header__logo--mobile" src="img/logo-header-mobile.svg" alt="header-logo">
             </a>
 
             <nav class="navigation">
@@ -24,6 +43,8 @@
                 <a class="navigation__link" href="javascript:;">Конкурс</a>
                 <a class="navigation__link" href="javascript:;">HTML Academy</a>
             </nav>
+            
+            <img class="header__burger-menu-logo" src="img/menu-burger.svg" alt="menu">
         </div>
     </header>
 
