--- a/index.html
+++ b/index.html
@@ -58,37 +58,37 @@
 </div>
 
 <main class="offers">
-    <section class="section">
-        <div class="section__bg"></div>
-        <div class="section__wrapper">
+    <section class="content-section">
+        <div class="content-section__bg"></div>
+        <div class="content-section__wrapper">
             <h2 class="offers__title">
                 Устали от серости мегаполиса?
                 Нам есть, что вам<br>
                 предложить!
             </h2>
 
-            <div class="offers-items">
-                <figure class="offers-items__item">
-                    <img class="offers-items__photo" src="img/iphone-1screen.png" alt="iphone-1screen">
+            <div class="offers-list">
+                <figure class="offers-list__item">
+                    <img class="offers-list__photo" src="img/iphone-1screen.png" alt="iphone-1screen">
                     <figcaption>
-                        <h3 class="offers-items__title">Поднимает настроение</h3>
-                        <p class="offers-items__text">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
+                        <h3 class="offers-list__title">Поднимает настроение</h3>
+                        <p class="offers-list__text">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
                     </figcaption>
                 </figure>
 
-                <figure class="offers-items__item">
-                    <img class="offers-items__photo" src="img/iphone-2screen.png" alt="iphone-2screen">
+                <figure class="offers-list__item">
+                    <img class="offers-list__photo" src="img/iphone-2screen.png" alt="iphone-2screen">
                     <figcaption>
-                        <h3 class="offers-items__title">Меняет мир вокруг</h3>
-                        <p class="offers-items__text">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
+                        <h3 class="offers-list__title">Меняет мир вокруг</h3>
+                        <p class="offers-list__text">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
                     </figcaption>
                 </figure>
 
-                <figure class="offers-items__item">
-                    <img class="offers-items__photo" src="img/iphone-3screen.png" alt="iphone-3screen">
+                <figure class="offers-list__item">
+                    <img class="offers-list__photo" src="img/iphone-3screen.png" alt="iphone-3screen">
                     <figcaption>
-                        <h3 class="offers-items__title">Заводит новых друзей</h3>
-                        <p class="offers-items__text">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
+                        <h3 class="offers-list__title">Заводит новых друзей</h3>
+                        <p class="offers-list__text">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
                     </figcaption>
                 </figure>
             </div>
@@ -97,9 +97,9 @@
 </main>
 
 <div class="facts">
-    <section class="section">
-        <div class="section__bg"></div>
-        <div class="section__wrapper">
+    <section class="content-section">
+        <div class="content-section__bg"></div>
+        <div class="content-section__wrapper">
             <img class="facts__timer" src="img/timer.svg" alt="timer">
 
             <div class="facts__main">
@@ -115,8 +115,8 @@
 </div>
 
 <div class="testimonials">
-    <section class="section">
-        <div class="section__wrapper">
+    <section class="content-section">
+        <div class="content-section__wrapper">
             <img class="testimonials__image" src="img/quotes.svg" alt="quotes">
 
             <div class="swiper-container">
@@ -174,9 +174,9 @@
 </div>
 
 <div class="tariffs">
-    <section class="section">
-        <div class="section__bg"></div>
-        <div class="section__wrapper">
+    <section class="content-section">
+        <div class="content-section__bg"></div>
+        <div class="content-section__wrapper">
             <table class="tariffs-table">
                 <tr class="tariffs-table__row tariffs-table__header">
                     <th class="tariffs-table__header-item tariffs-table__header-item--empty"></th>
