--- a/index.html
+++ b/index.html
@@ -269,8 +269,8 @@
 </div>
 
 <div class="contacts">
-    <section class="section">
-        <div class="section__wrapper">
+    <section class="content-section">
+        <div class="content-section__wrapper">
             <h2 class="contacts__title">Остались вопросы? Свяжитесь с нами!</h2>
 
             <div class="contacts__items">
@@ -297,9 +297,9 @@
 </div>
 
 <div class="map">
-    <section class="section">
-        <div class="section__bg"></div>
-        <div class="section__wrapper">
+    <section class="content-section">
+        <div class="content-section__bg"></div>
+        <div class="content-section__wrapper">
             <div class="map__main" id="wrapper-9cd199b9cc5410cd3b1ad21cab2e54d3">
                 <div id="map-9cd199b9cc5410cd3b1ad21cab2e54d3"></div>
                 <a href="https://embedgooglemap.1map.com/ru?embed_id=175608">1 Map</a>
@@ -309,8 +309,8 @@
 </div>
 
 <footer class="footer">
-    <section class="section">
-        <div class="section__wrapper">
+    <section class="content-section">
+        <div class="content-section__wrapper">
             <a class="footer__link-logo" href="/">
                 <img class="footer__logo" src="img/logo-footer.svg" alt="footer-logo">
             </a>
